# fitzbeach

./: .gitignore  .parcelrc  .tool-versions  404.html  AGENTS.md  README.md  book.9ca6def5.js  book.9ca6def5.js.map  book.html  book.js  elm.json  fitzbeach.e02fbd41.js  fitzbeach.e02fbd41.js.map  fitzbeach.f82ee32e.js  fitzbeach.f82ee32e.js.map  flake.nix  frontend.2788f56f.js  frontend.2788f56f.js.map  frontend.66756401.js  frontend.66756401.js.map  frontend.90e25b35.js  frontend.90e25b35.js.map  index.html  index.js  package-lock.json  package.json
.agents/skills/aws-static-lambda/: SKILL.md
.agents/skills/elm/: SKILL.md
.agents/skills/elm-parcel-app/: SKILL.md
.agents/skills/elm-review/: SKILL.md
.agents/skills/elm-testing/: SKILL.md
.agents/skills/elm-ui/: SKILL.md
.agents/skills/elm-ui-review/: SKILL.md
.agents/skills/elmbook/: SKILL.md
.agents/skills/fixing/: SKILL.md
.agents/skills/github-pages-static-app/: SKILL.md
.agents/skills/haskell-backend/: SKILL.md
.agents/skills/implementation/: SKILL.md
.agents/skills/nix-verified-frontend/: SKILL.md
.agents/skills/skill-authoring/: SKILL.md
.agents/skills/ui-review/: SKILL.md
.codex/skills/elm-parcel-app/: SKILL.md
.codex/skills/elm-review/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: deploy.yml  destroy.yml  nix-health.yml  update-flake-lock.yml
aws/: package.json
aws/infra/: github-actions-oidc-trust-policy.json
aws/scripts/: aws-build.sh  aws-deploy.sh  aws-destroy.sh  aws-frontend-build.sh  aws-frontend-publish.sh  aws-status.sh  build-frontend.mjs  build-pages.mjs  build.mjs  deploy.mjs  destroy.mjs  pages-redirect-build.sh  publish.mjs  status.mjs
backend/: .stack-work  Dockerfile  fitzbeach-backend.cabal  package.json  stack.yaml
backend/app/: GenerateElm.hs  Main.hs
backend/src/: Api.hs  BackendApp.hs  Product.hs  ProductSource.hs
backend/src/Codegen/Elm/: Definitions.hs  HealthResponse.hs  Product.hs
backend/test/: SmokeSpec.hs  Spec.hs
docs/codex/: implementation-thread.md  refactor-thread.md  ui-review-thread.md
frontend/: View.elm  book.js  elm.json  index.js  package.json  redirect.html
frontend/Book/: MotorcycleChapter.elm
frontend/View/: PageHeading.elm  ThemeToggle.elm
frontend/src/: Motorcycle.elm  ServiceHealth.elm  View.elm
frontend/tests/: BookTest.elm  MainTest.elm
infra/: github-actions-deploy-policy.json  github-actions-oidc-trust-policy.json  template.yaml
review/: elm.json
review/src/: ReviewConfig.elm
scripts/: aws-build.sh  aws-common.sh  aws-deploy.sh  aws-destroy.sh  aws-frontend-build.sh  aws-frontend-publish.sh  aws-status.sh
src/: Book.elm  Main.elm  Motorcycle.elm  Robot.elm  View.elm
src/Api/: Products.elm
src/Book/: Fixtures.elm  MotorcycleChapter.elm  ProductPanelChapter.elm  RobotChapter.elm  RobotControlButtonChapter.elm  ThemeChapter.elm
src/Motorcycle/: Api.elm  Model.elm  Page.elm
src/Robot/: Feature.elm  Logic.elm  Model.elm  View.elm
src/View/: Grid.elm  Shell.elm  Theme.elm  ThemeToggle.elm
tests/: MainTest.elm  RobotTest.elm  ThemeTest.elm  ViewTest.elm
tests/Motorcycle/: ModelTest.elm
tests/Robot/: FeatureTest.elm  LogicTest.elm
tests/View/: ThemeTest.elm
(+55 files in other folders)
