cabal-version:      2.4
name:               fitzbeach-backend
version:            0.1.0.0
build-type:         Simple

executable fitzbeach-backend
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:    Api, Product, ProductSource
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson >=2.1 && <2.3
    , base >=4.18 && <5
    , servant >=0.20 && <0.21
    , servant-server >=0.20 && <0.21
    , text >=2.0 && <2.2
    , wai >=3.2 && <3.3
    , wai-cors >=0.2 && <0.3
    , warp >=3.3 && <3.5
