cabal-version:      2.4
name:               fitzbeach-backend
version:            0.1.0.0
build-type:         Simple

executable fitzbeach-backend
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:    Api, BackendApp, Product, ProductSource
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson >=2.1 && <2.3
    , base >=4.18 && <5
    , elm-syntax >=0.3 && <0.4
    , generics-sop >=0.5 && <0.6
    , haskell-to-elm >=0.3 && <0.4
    , servant >=0.20 && <0.21
    , servant-server >=0.20 && <0.21
    , text >=2.0 && <2.2
    , wai >=3.2 && <3.3
    , wai-cors >=0.2 && <0.3
    , warp >=3.3 && <3.5

executable fitzbeach-backend-codegen
  main-is:          GenerateElm.hs
  hs-source-dirs:   app, src
  other-modules:    Api, Product
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson >=2.1 && <2.3
    , base >=4.18 && <5
    , bytestring >=0.11 && <0.13
    , containers >=0.6 && <0.8
    , directory >=1.3 && <1.4
    , elm-syntax >=0.3 && <0.4
    , filepath >=1.4 && <1.6
    , generics-sop >=0.5 && <0.6
    , haskell-to-elm >=0.3 && <0.4
    , prettyprinter >=1.7 && <1.8
    , servant >=0.20 && <0.21
    , servant-server >=0.20 && <0.21
    , text >=2.0 && <2.2
    , unordered-containers >=0.2 && <0.3

test-suite fitzbeach-backend-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test, src
  other-modules:    Api, BackendApp, Product, ProductSource, SmokeSpec
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson >=2.1 && <2.3
    , base >=4.18 && <5
    , hspec >=2.11 && <2.12
    , hspec-wai >=0.11 && <0.12
    , http-types >=0.12 && <0.13
    , elm-syntax >=0.3 && <0.4
    , generics-sop >=0.5 && <0.6
    , haskell-to-elm >=0.3 && <0.4
    , servant >=0.20 && <0.21
    , servant-server >=0.20 && <0.21
    , text >=2.0 && <2.2
    , wai >=3.2 && <3.3
    , wai-extra >=3.1 && <3.2
    , wai-cors >=0.2 && <0.3
